--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -9,17 +9,26 @@ $theme-colors: (
   "negro": $negro
 );
 
+$carousel-control-color:             black;
+$carousel-control-icon-width:        4rem;
+
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 
 .botonNuevo{
-  @include button-variant(transparent,$lila);
+  @include button-variant(white, black);
   border-radius: 0;
-  color: $negro;
+  color: black;
 }
 
+
 #hero{
+  height: 70vh;
+  padding: 0;
+}
+
+#img1{
   height: 80vh;
   background-image: url("../imagnes/fotoHero.jpg");
   background-repeat: no-repeat;
@@ -27,22 +36,46 @@ $theme-colors: (
   object-fit: cover;
 }
 
-.hero{
+#img2{
+  height: 80vh;
+  background-image: url("../imagnes/foto2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+}
+
+#img3{
+  height: 80vh;
+  background-image: url("../imagnes/foto3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+}
+
+#carouselInicio{
   position: relative;
 }
 
-.overlay{
+#posicionarCarousel{
+  text-align: center;
+  color: black;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: rgba($color: white, $alpha: 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background-color: black;
-  opacity: 50%;
-  z-index: 2;
 }
 
+.frente{
+  z-index: 10000;
+}
 
-#txtMedio{
-  z-index: 600;
+.carousel-indicators{
+  position: absolute;
+  top: 0;
 }
