--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -24,12 +24,11 @@ $carousel-control-icon-width:        4rem;
 
 
 #hero{
-  height: 70vh;
   padding: 0;
 }
 
 #img1{
-  height: 80vh;
+  height: 70vh;
   background-image: url("../imagnes/fotoHero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -37,7 +36,7 @@ $carousel-control-icon-width:        4rem;
 }
 
 #img2{
-  height: 80vh;
+  height: 70vh;
   background-image: url("../imagnes/foto2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -45,7 +44,7 @@ $carousel-control-icon-width:        4rem;
 }
 
 #img3{
-  height: 80vh;
+  height: 70vh;
   background-image: url("../imagnes/foto3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -78,4 +77,8 @@ $carousel-control-icon-width:        4rem;
 .carousel-indicators{
   position: absolute;
   top: 0;
+}
+
+.card-img-top img{
+  object-fit: cover;
 }
