--- a/Pagina/css/estilo.css
+++ b/Pagina/css/estilo.css
@@ -10684,4 +10684,8 @@ textarea.form-control-lg {
 a {
   text-decoration: none;
   color: white;
+}
+
+#icono {
+  background-color: rgb(0, 81, 255);
 }/*# sourceMappingURL=estilo.css.map */
