--- a/Pagina/css/estilo.css
+++ b/Pagina/css/estilo.css
@@ -10687,5 +10687,7 @@ a {
 }
 
 #icono {
+  width: 30px;
+  height: 30px;
   background-color: rgb(0, 81, 255);
 }/*# sourceMappingURL=estilo.css.map */
