--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -3,12 +3,14 @@ $whiteSmoke: whitesmoke;
 $lila: #563b63;
 $negro:#080504;
 $azul : rgb(0, 81, 255);
+$rojo: rgb(243, 2, 2);
 $theme-colors: (
   "secondary" : $secondary,
   "whiteSmoke" : $whiteSmoke,
   "lila" : $lila,
   "negro": $negro,
   "azul" : $azul,
+  "rojo" : $rojo
 );
 
 $carousel-control-color:             black;
@@ -103,8 +105,8 @@ a{
 }
 
 #icono{
-  width: 30px;
-  height: 30px;
+  width: 100px;
+  height: 100px;
   background-color: $azul;
 }
 
