--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -114,6 +114,9 @@ a{
   font-weight: bolder;
   vertical-align: middle;
   font-size: 4rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .loader {
@@ -146,3 +149,8 @@ a{
     transform: rotate(360deg);
   }
 } 
+
+#btnAbajo{
+  height: 100%;
+  align-self: flex-end;
+}
