--- a/Pagina/css/estilo.css
+++ b/Pagina/css/estilo.css
@@ -10665,6 +10665,10 @@ textarea.form-control-lg {
   color: black;
 }
 
+#cabecera {
+  background-color: black;
+}
+
 #hero {
   padding: 0;
 }
@@ -10782,9 +10786,6 @@ a {
   font-weight: bolder;
   vertical-align: middle;
   font-size: 4rem;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .loader {
@@ -10818,8 +10819,4 @@ a {
   100% {
     transform: rotate(360deg);
   }
-}
-#btnAbajo {
-  height: 100%;
-  align-self: flex-end;
 }/*# sourceMappingURL=estilo.css.map */
