--- a/Pagina/css/estilo.css
+++ b/Pagina/css/estilo.css
@@ -10669,6 +10669,10 @@ textarea.form-control-lg {
   background-color: black;
 }
 
+#footer {
+  background-color: black;
+}
+
 #hero {
   padding: 0;
 }
