--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -30,6 +30,10 @@ $carousel-control-icon-width:        4rem;
   background-color: black;
 }
 
+#footer{
+  background-color: black;
+}
+
 #hero{
   padding: 0;
 }
