--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -123,6 +123,30 @@ a{
   font-size: 4rem;
 }
 
+.iconoCards{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+  border: 1px solid white;
+  font-size: 2rem;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.imgListado{
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+}
+
+.imgListado img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .loader {
   width: 48px;
   height: 48px;
@@ -155,5 +179,5 @@ a{
 } 
 
 .verModal:hover{
-  background-color: $azul;
+  color: $azul;
 }
