--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -39,7 +39,7 @@ $carousel-control-icon-width:        4rem;
 }
 
 #img1{
-  height: 70vh;
+  height: 80vh;
   background-image: url("../imagnes/fotoHero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -47,7 +47,7 @@ $carousel-control-icon-width:        4rem;
 }
 
 #img2{
-  height: 70vh;
+  height: 80vh;
   background-image: url("../imagnes/foto2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -55,7 +55,7 @@ $carousel-control-icon-width:        4rem;
 }
 
 #img3{
-  height: 70vh;
+  height: 80vh;
   background-image: url("../imagnes/foto3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -128,11 +128,12 @@ a{
   height: 50px;
   position: absolute;
   top: 3%;
-  left: 3%;
+  right: 3%;
   border: 1px solid white;
   font-size: 2rem;
   vertical-align: middle;
   text-align: center;
+  color: white;
 }
 
 .imgListado{
