--- a/Pagina/css/estilo.css
+++ b/Pagina/css/estilo.css
@@ -35,12 +35,14 @@
   --bs-negro: #080504;
   --bs-azul: rgb(0, 81, 255);
   --bs-rojo: rgb(243, 2, 2);
+  --bs-dorado: rgb(163, 148, 7);
   --bs-secondary-rgb: 128, 128, 128;
   --bs-whiteSmoke-rgb: 245, 245, 245;
   --bs-lila-rgb: 86, 59, 99;
   --bs-negro-rgb: 8, 5, 4;
   --bs-azul-rgb: 0, 81, 255;
   --bs-rojo-rgb: 243, 2, 2;
+  --bs-dorado-rgb: 163, 148, 7;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -2936,6 +2938,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: rgb(243, 2, 2);
 }
 
+.btn-dorado {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(163, 148, 7);
+  --bs-btn-border-color: rgb(163, 148, 7);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #b1a42c;
+  --bs-btn-hover-border-color: #ac9f20;
+  --bs-btn-focus-shadow-rgb: 139, 126, 6;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #b5a939;
+  --bs-btn-active-border-color: #ac9f20;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(163, 148, 7);
+  --bs-btn-disabled-border-color: rgb(163, 148, 7);
+}
+
 .btn-outline-secondary {
   --bs-btn-color: gray;
   --bs-btn-border-color: gray;
@@ -3035,6 +3054,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: rgb(243, 2, 2);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: rgb(243, 2, 2);
+  --bs-gradient: none;
+}
+
+.btn-outline-dorado {
+  --bs-btn-color: rgb(163, 148, 7);
+  --bs-btn-border-color: rgb(163, 148, 7);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(163, 148, 7);
+  --bs-btn-hover-border-color: rgb(163, 148, 7);
+  --bs-btn-focus-shadow-rgb: 163, 148, 7;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(163, 148, 7);
+  --bs-btn-active-border-color: rgb(163, 148, 7);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(163, 148, 7);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(163, 148, 7);
   --bs-gradient: none;
 }
 
@@ -4632,6 +4668,15 @@ textarea.form-control-lg {
   color: #750101;
 }
 
+.alert-dorado {
+  --bs-alert-color: #625904;
+  --bs-alert-bg: #edeacd;
+  --bs-alert-border-color: #e3dfb5;
+}
+.alert-dorado .alert-link {
+  color: #4e4703;
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5006,6 +5051,20 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #920101;
   border-color: #920101;
+}
+
+.list-group-item-dorado {
+  color: #625904;
+  background-color: #edeacd;
+}
+.list-group-item-dorado.list-group-item-action:hover, .list-group-item-dorado.list-group-item-action:focus {
+  color: #625904;
+  background-color: #d5d3b9;
+}
+.list-group-item-dorado.list-group-item-action.active {
+  color: #fff;
+  background-color: #625904;
+  border-color: #625904;
 }
 
 .btn-close {
@@ -6560,6 +6619,11 @@ textarea.form-control-lg {
   background-color: RGBA(243, 2, 2, var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-dorado {
+  color: #000 !important;
+  background-color: RGBA(163, 148, 7, var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-secondary {
   color: gray !important;
 }
@@ -6600,6 +6664,13 @@ textarea.form-control-lg {
 }
 .link-rojo:hover, .link-rojo:focus {
   color: #f53535 !important;
+}
+
+.link-dorado {
+  color: rgb(163, 148, 7) !important;
+}
+.link-dorado:hover, .link-dorado:focus {
+  color: #b5a939 !important;
 }
 
 .ratio {
@@ -7051,6 +7122,11 @@ textarea.form-control-lg {
 .border-rojo {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-rojo-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-dorado {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-dorado-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-white {
@@ -7905,6 +7981,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-rojo-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-dorado {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-dorado-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -7984,6 +8065,11 @@ textarea.form-control-lg {
 .bg-rojo {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-rojo-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-dorado {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-dorado-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
