--- a/Pagina/css/estilo.scss
+++ b/Pagina/css/estilo.scss
@@ -4,13 +4,15 @@ $lila: #563b63;
 $negro:#080504;
 $azul : rgb(0, 81, 255);
 $rojo: rgb(243, 2, 2);
+$dorado : rgb(163, 148, 7);
 $theme-colors: (
   "secondary" : $secondary,
   "whiteSmoke" : $whiteSmoke,
   "lila" : $lila,
   "negro": $negro,
   "azul" : $azul,
-  "rojo" : $rojo
+  "rojo" : $rojo,
+  "dorado" : $dorado
 );
 
 $carousel-control-color:             black;
@@ -90,8 +92,10 @@ $carousel-control-icon-width:        4rem;
   top: 0;
 }
 
-.card-img-top img{
+.card-img-top iframe{
   object-fit: cover;
+  width: 100%;
+  height: 200px;
 }
 
 .card:hover{
