--- a/Pagina/css/estilo.css
+++ b/Pagina/css/estilo.css
@@ -36,6 +36,7 @@
   --bs-azul: rgb(0, 81, 255);
   --bs-rojo: rgb(243, 2, 2);
   --bs-dorado: rgb(163, 148, 7);
+  --bs-verde: rgb(10, 243, 30);
   --bs-secondary-rgb: 128, 128, 128;
   --bs-whiteSmoke-rgb: 245, 245, 245;
   --bs-lila-rgb: 86, 59, 99;
@@ -43,6 +44,7 @@
   --bs-azul-rgb: 0, 81, 255;
   --bs-rojo-rgb: 243, 2, 2;
   --bs-dorado-rgb: 163, 148, 7;
+  --bs-verde-rgb: 10, 243, 30;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -2955,6 +2957,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: rgb(163, 148, 7);
 }
 
+.btn-verde {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(10, 243, 30);
+  --bs-btn-border-color: rgb(10, 243, 30);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #2ff540;
+  --bs-btn-hover-border-color: #23f435;
+  --bs-btn-focus-shadow-rgb: 9, 207, 26;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #3bf54b;
+  --bs-btn-active-border-color: #23f435;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(10, 243, 30);
+  --bs-btn-disabled-border-color: rgb(10, 243, 30);
+}
+
 .btn-outline-secondary {
   --bs-btn-color: gray;
   --bs-btn-border-color: gray;
@@ -3071,6 +3090,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: rgb(163, 148, 7);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: rgb(163, 148, 7);
+  --bs-gradient: none;
+}
+
+.btn-outline-verde {
+  --bs-btn-color: rgb(10, 243, 30);
+  --bs-btn-border-color: rgb(10, 243, 30);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(10, 243, 30);
+  --bs-btn-hover-border-color: rgb(10, 243, 30);
+  --bs-btn-focus-shadow-rgb: 10, 243, 30;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(10, 243, 30);
+  --bs-btn-active-border-color: rgb(10, 243, 30);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(10, 243, 30);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(10, 243, 30);
   --bs-gradient: none;
 }
 
@@ -4677,6 +4713,15 @@ textarea.form-control-lg {
   color: #4e4703;
 }
 
+.alert-verde {
+  --bs-alert-color: #04610c;
+  --bs-alert-bg: #cefdd2;
+  --bs-alert-border-color: #b6fbbc;
+}
+.alert-verde .alert-link {
+  color: #034e0a;
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5065,6 +5110,20 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #625904;
   border-color: #625904;
+}
+
+.list-group-item-verde {
+  color: #04610c;
+  background-color: #cefdd2;
+}
+.list-group-item-verde.list-group-item-action:hover, .list-group-item-verde.list-group-item-action:focus {
+  color: #04610c;
+  background-color: #b9e4bd;
+}
+.list-group-item-verde.list-group-item-action.active {
+  color: #fff;
+  background-color: #04610c;
+  border-color: #04610c;
 }
 
 .btn-close {
@@ -6624,6 +6683,11 @@ textarea.form-control-lg {
   background-color: RGBA(163, 148, 7, var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-verde {
+  color: #000 !important;
+  background-color: RGBA(10, 243, 30, var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-secondary {
   color: gray !important;
 }
@@ -6671,6 +6735,13 @@ textarea.form-control-lg {
 }
 .link-dorado:hover, .link-dorado:focus {
   color: #b5a939 !important;
+}
+
+.link-verde {
+  color: rgb(10, 243, 30) !important;
+}
+.link-verde:hover, .link-verde:focus {
+  color: #3bf54b !important;
 }
 
 .ratio {
@@ -7127,6 +7198,11 @@ textarea.form-control-lg {
 .border-dorado {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-dorado-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-verde {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-verde-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-white {
@@ -7986,6 +8062,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-dorado-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-verde {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-verde-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -8070,6 +8151,11 @@ textarea.form-control-lg {
 .bg-dorado {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dorado-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-verde {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-verde-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
@@ -10818,9 +10904,11 @@ textarea.form-control-lg {
   top: 0;
 }
 
-.card-img-top img {
+.card-img-top iframe {
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
+  height: 200px;
 }
 
 .card:hover {
